# icu

./: CMakeLists.txt
icu4c/source/: CMakeLists.txt
icu4c/source/common/: CMakeLists.txt
icu4c/source/data/: CMakeLists.txt
icu4c/source/i18n/: CMakeLists.txt
